--- a/cc-info.html
+++ b/cc-info.html
@@ -40,11 +40,7 @@
             <p>The logo was drawn in Krita and features a beagle in a sketched style. Originally it was intended to be a rough concept of what the logo could look like, however the client fell in love with the hand drawn look of it and requested we use it as is. Being quite a fun and playful logo, I wanted a font to match and went with Pompiere from Google Fonts.</p>
         </div>
     </div>
-    <div class="images">
-            <img src="img/cc-snippet1.jpg">
-            <img src="img/cc-snippet2.jpg">
-        </div>
-  </div>
+    <button><a href="https://www.caninecoffee.co.uk/">View Full Site</a></button>
 <script src="javascript/scripts.js"></script>
 </body>
 </html>
