--- a/cc-info.html
+++ b/cc-info.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>Sean Nattress | Front End Dev</title>
+  <!--meta-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--css-->
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oleo+Script" rel="stylesheet"> 
