--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>Sean Nattress | Front End Dev</title>
+  <!--meta-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--css-->
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
