--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
           <li><a href="#contact" class="nav-links">Contact</a></li>
-          <li><a class="nav-links">CV</a></li>
+          <li><a href="https://drive.google.com/open?id=1CdgB81gK3GiuRSbFzjmB4wIwuG4Un9Kx" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
     <img src="./img/logo.png" class="logo">
