--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <div class="paralax">
+    <div class="gradient">
       <nav class="navbar">
         <span id="navbar-toggle">
           <i class="fas fa-bars"></i>
@@ -26,7 +27,8 @@
           <li><a href="https://drive.google.com/open?id=1dgkrMBQfMVsTWXUatQeWT3R6vpaYOtty" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
-    <img src="./img/logo.png" class="logo">
+      <img src="./img/logo.png" class="logo">
+    </div>
   </div>
 
   <div class="grid">
