--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="col-2">
       <article>
-        <a class="tile" href="https://www.caninecoffee.co.uk/" target="_blank">
+        <a class="tile" href="https://seancyan.github.io/caninecoffee/index" target="_blank">
           <img src="./img/ccTile.jpg" alt="canine coffee tile">
         </a>
         <div class="tile_overlay purple">
