--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>Canine Coffee</h2>
             <div class="line"></div>
             <p>Website and Logo custom designed for a local dog friendly coffee shop</p>
-            <button><a href="https://www.caninecoffee.co.uk/" target="_blank">Full Site</a></button><button><a href="cc-info.html">Info</a></button>
+            <button><a href="https://seancyan.github.io/caninecoffee/index" target="_blank">Full Site</a></button><button><a href="cc-info.html">Info</a></button>
           </div>
         </div>
       </article>
