--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
           <li><a href="#contact" class="nav-links">Contact</a></li>
-          <li><a href="https://drive.google.com/file/d/19x4q_8ELfG7kBSU3ko7CMWe1Pb6-nGXW/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
+          <li><a href="https://drive.google.com/file/d/1i78M4DGPM-_APRKkPeGTVva3_v3W5sLC/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
       <img src="./img/logo.png" class="logo">
@@ -173,7 +173,7 @@
         <a href="https://github.com/SeanCyan" target="_blank">
           <img src="icons/github.svg">
           <span>GitHub</span>
-          <a href="https://dribbble.com/SeanNattress" target="_blank">
+          <a href="https://dribbble.com/Sean_Nattress" target="_blank">
             <img src="icons/dribbble.svg">
             <span>Dribbble</span>
         </a>
