--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="main-nav">
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
-          <li><a href="#contact" class="nav-links">Contact</a></li>
+          <li><a href="#contact" class="nav-links">Contacta</a></li>
           <li><a href="https://drive.google.com/file/d/1ofZLJFl7q1xEr_4588w-_woWlZHKPlQW/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
