--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
         <ul class="main-nav">
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
-          <li><a href="#contact" class="nav-links">Contacta</a></li>
+          <li><a href="#contact" class="nav-links">Contact</a></li>
           <li><a href="https://drive.google.com/file/d/1ofZLJFl7q1xEr_4588w-_woWlZHKPlQW/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
-      <img src="./img/logo.png" class="logo">
+      <div class="introContainer">
+        <div class="nameContainer">
+          <h1 class="introNameStyle">Sean Nattress<span>...</span></h1>
+        </div>
+        <div>
+          <p class="introCopyStyle">Welcome to my portfolio! I specialise in creating beautiful, responsive websites that are both visually striking and highly functional. With a keen eye for design and a strong foundation in front-end development, I bring ideas to life with smooth user experiences and clean, efficient code.<br><br>Scroll down to see some examples of my work.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -35,45 +42,54 @@
     <div class="col-1">
       <article>
         <a name="projects" class="tile" href="https://seancyan.github.io/reactjs-calendar/" target="_blank">
-          <img src="./img/calendar.jpg" alt="react calendar tile">
+          <img src="./img/workExamplesBW.jpg" alt="work examples">
         </a>
         <div class="tile_overlay red">
           <div class="overlay_content">
-            <h2>React.js Calendar</h2>
+            <h2>Design Work</h2>
             <div class="line"></div>
-            <p>Responsive calendar and integrated to-do list created using React</p>
-            <button><a href="https://seancyan.github.io/reactjs-calendar/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/reactjs-calendar" target="_blank">Repo</a></button>
+            <p>Click to view some examples of emails and onsite displays that I have designed for clients</p>
+            <button class="buttonLg"><a href="https://seancyan.github.io/reactjs-calendar/" target="_blank">View More</a></button>
           </div>
         </div>
       </article>
       <div class="col-row">
-        <article class="tile">
-          <img src="./img/mountains.jpg">
+        <article>
+          <a class="tile" href="https://seancyan.github.io/Hangzhou/" target="_blank">
+          <img src="./img/temple.jpg">
+        </a>
+        <div class="tile_overlay red">
+          <div class="overlay_content">
+            <h2>Landing Page</h2>
+            <div class="line"></div>
+            <p>Mockup for a travel site landing page with newsletter signup modal</p>
+            <button><a href="https://seancyan.github.io/Hangzhou/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/Hangzhou" target="_blank">Repo</a></button>
+          </div>
         </article>
         <article>
           <a class="tile" href="https://seancyan.github.io/Hangzhou/" target="_blank">
-            <img src="./img/temple.jpg" alt="landing page tile">
+            <img src="./img/ebookBW.jpg" alt="ebooks">
           </a>
           <div class="tile_overlay blue">
             <div class="overlay_content">
-              <h2>Landing Page</h2>
+              <h2>eBooks</h2>
               <div class="line"></div>
-              <p>Mockup for a travel site landing page with newsletter signup modal</p>
-              <button><a href="https://seancyan.github.io/Hangzhou/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/Hangzhou" target="_blank">Repo</a></button>
+              <p>Click to view some examples from ebooks that I have completed the design work for</p>
+              <button class="buttonLg"><a href="https://seancyan.github.io/Hangzhou/" target="_blank">View More</a></button>
             </div>
           </div>
         </article>
       </div>
       <article>
-        <a class="tile" href="https://seancyan.github.io/React-Weather-App/" target="_blank">
-          <img src="./img/weather.jpg" alt="weather app tile">
+        <a name="projects" class="tile" href="https://seancyan.github.io/reactjs-calendar/" target="_blank">
+          <img src="./img/calendar2BW.jpg" alt="react calendar tile">
         </a>
         <div class="tile_overlay purple">
           <div class="overlay_content">
-            <h2>React.js Weather App</h2>
+            <h2>React.js Calendar</h2>
             <div class="line"></div>
-            <p>Weather App providing 5-day forecast for requested city. Created using React.</p>
-            <button><a href="https://seancyan.github.io/React-Weather-App/" target="_blank">Full Site</a></button><button>Repo</button>
+            <p>Responsive calendar and integrated to-do list created using React</p>
+            <button><a href="https://seancyan.github.io/reactjs-calendar/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/reactjs-calendar" target="_blank">Repo</a></button>
           </div>
         </div>
       </article>
@@ -94,7 +110,7 @@
       </article>
       <article>
         <a class="tile" href="https://seancyan.github.io/vue-image-gallery/" target="_blank">
-          <img src="./img/gallery.jpg" alt="image gallery tile">
+          <img src="./img/galleryBW.jpg" alt="image gallery tile">
         </a>
         <div class="tile_overlay red">
           <div class="overlay_content">
@@ -106,64 +122,9 @@
         </div>
       </article>
     </div>
-    <div class="skills">
-      <h1>My Toolbox</h1>
-      <h2>Design</h2>
-      <div class="icons">
-        <a>
-          <img title="Adobe Photoshop" src="icons/photoshop.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Adobe Xd" src="icons/xd.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Adobe Illustrator" src="icons/illustrator.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Sketch" src="icons/sketch.svg">
-          <span class="desc"></span>
-        </a>
-      </div>
-      <h2>Front-End</h2>
-      <div class="icons">
-        <a>
-          <img title="HTML5" src="icons/html5.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="CSS3" src="icons/css3.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="SASS" src="icons/sass.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="JavaScript" src="icons/js.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="React.js" src="icons/react.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Vue.js" src="icons/vue.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Node.js" src="icons/node.svg">
-          <span class="desc"></span>
-        </a>
-        <a>
-          <img title="Git" src="icons/git.svg">
-          <span class="desc"></span>
-        </a>
-      </div>
-    </div>
+
     <div class="footer">
+    <div class="contactContainer">
       <h2>Contact</h2>
       <div class="contact">
         <a name="contact" href="mailto:snattress5@googlemail.com">
@@ -177,7 +138,8 @@
             <img src="icons/dribbble.svg">
             <span>Dribbble</span>
         </a>
-      <div>
+      </a>
+    </div>
     </div>
   </div>
 <script src="javascript/scripts.js"></script>
