--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
           <li><a href="https://drive.google.com/file/d/1ofZLJFl7q1xEr_4588w-_woWlZHKPlQW/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
-      <div class="introContainer">
-        <div class="nameContainer">
-          <h1 class="introNameStyle">Sean Nattress<span>...</span></h1>
+      <div class="homeContent">
+        <div class="introContainer">
+          <div class="nameContainer">
+            <h1 class="introNameStyle">Sean Nattress<span>...</span></h1>
+          </div>
+          <div>
+            <p class="introCopyStyle">Welcome to my portfolio! I specialise in creating beautiful, responsive websites that are both visually striking and highly functional. With a keen eye for design and a strong foundation in front-end development, I bring ideas to life with smooth user experiences and clean, efficient code.<br><br>Scroll down to see some examples of my work.</p>
+          </div>
         </div>
-        <div>
-          <p class="introCopyStyle">Welcome to my portfolio! I specialise in creating beautiful, responsive websites that are both visually striking and highly functional. With a keen eye for design and a strong foundation in front-end development, I bring ideas to life with smooth user experiences and clean, efficient code.<br><br>Scroll down to see some examples of my work.</p>
+        <div class="profilePicContainer">
+          <img class="profilePic" src="./img/meImg.png" alt="Sean Nattress">
         </div>
       </div>
     </div>
