add client work page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="grid">
     <div class="col-1">
       <article>
-        <a name="projects" class="tile" href="https://seancyan.github.io/emailCarousel/" target="_blank">
+        <a name="projects" class="tile" href="clientWork.html" target="_blank">
           <img src="./img/workExamplesBW.jpg" alt="work examples">
         </a>
         <div class="tile_overlay red">
@@ -54,7 +54,7 @@
             <h2>Design Work</h2>
             <div class="line"></div>
             <p>Click to view some examples of emails and onsite displays that I have designed for clients</p>
-            <button class="buttonLg"><a href="https://seancyan.github.io/emailCarousel/" target="_blank">View More</a></button>
+            <button class="buttonLg"><a href="clientWork.html">View More</a></button>
           </div>
         </div>
       </article>
