--- a/clientWork.html
+++ b/clientWork.html
@@ -18,7 +18,7 @@
             <a href="https://seancyan.github.io/EMR-Carousel/">&nbsp;</a>
         </div>
         <div class="onsiteContainer">
-            &nbsp;
+            <a href="https://seancyan.github.io/OSRCarousel/">&nbsp;</a>
         </div>
     </div>
 </body>
