--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
           </div>
         </article>
         <article>
-          <a class="tile" href="https://seancyan.github.io/Hangzhou/" target="_blank">
+          <a class="tile" href="https://seancyan.github.io/Ebooks/" target="_blank">
             <img src="./img/ebookBW.jpg" alt="ebooks">
           </a>
           <div class="tile_overlay blue">
             <div class="overlay_content">
               <h2>eBooks</h2>
               <div class="line"></div>
-              <p>Click to view some examples from ebooks that I have completed the design work for</p>
-              <button class="buttonLg"><a href="https://seancyan.github.io/Hangzhou/" target="_blank">View More</a></button>
+              <p>Click to view some sample pages from ecommerce ebooks I have designed</p>
+              <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/" target="_blank">View More</a></button>
             </div>
           </div>
         </article>
