--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </article>
       <div class="col-row">
         <article>
-          <a class="tile" href="https://seancyan.github.io/Hangzhou/" target="_blank">
+          <a class="tile" href="https://seancyan.github.io/Hangzhou/">
           <img src="./img/temple.jpg">
         </a>
         <div class="tile_overlay red">
@@ -68,11 +68,11 @@
             <h2>Landing Page</h2>
             <div class="line"></div>
             <p>Mockup for a travel site landing page with newsletter signup modal</p>
-            <button><a href="https://seancyan.github.io/Hangzhou/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/Hangzhou" target="_blank">Repo</a></button>
+            <button><a href="https://seancyan.github.io/Hangzhou/">Full Site</a></button><button><a href="https://github.com/SeanCyan/Hangzhou" target="_blank">Repo</a></button>
           </div>
         </article>
         <article>
-          <a class="tile" href="https://seancyan.github.io/Ebooks/" target="_blank">
+          <a class="tile" href="https://seancyan.github.io/Ebooks/">
             <img src="./img/ebookBW.jpg" alt="ebooks">
           </a>
           <div class="tile_overlay blue">
@@ -80,13 +80,13 @@
               <h2>eBooks</h2>
               <div class="line"></div>
               <p>Click to view some sample pages from ecommerce ebooks I have designed</p>
-              <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/" target="_blank">View More</a></button>
+              <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/">View More</a></button>
             </div>
           </div>
         </article>
       </div>
       <article>
-        <a name="projects" class="tile" href="https://seancyan.github.io/reactjs-calendar/" target="_blank">
+        <a name="projects" class="tile" href="https://seancyan.github.io/reactjs-calendar/">
           <img src="./img/calendar2BW.jpg" alt="react calendar tile">
         </a>
         <div class="tile_overlay purple">
@@ -94,15 +94,15 @@
             <h2>React.js Calendar</h2>
             <div class="line"></div>
             <p>Responsive calendar and integrated to-do list created using React</p>
-            <button><a href="https://seancyan.github.io/reactjs-calendar/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/reactjs-calendar" target="_blank">Repo</a></button>
+            <button><a href="https://seancyan.github.io/reactjs-calendar/">Full Site</a></button><button><a href="https://github.com/SeanCyan/reactjs-calendar" target="_blank">Repo</a></button>
           </div>
         </div>
       </article>
     </div>
     <div class="col-2">
       <article>
-        <a class="tile" href="https://seancyan.github.io/caninecoffee/index" target="_blank">
-          <img src="./img/ccTile.jpg" alt="canine coffee tile">
+        <a class="tile" href="https://seancyan.github.io/caninecoffee/index">
+          <img src="./img/ccTile2.jpg" alt="canine coffee tile">
         </a>
         <div class="tile_overlay purple">
           <div class="overlay_content">
@@ -114,7 +114,7 @@
         </div>
       </article>
       <article>
-        <a class="tile" href="https://seancyan.github.io/vue-image-gallery/" target="_blank">
+        <a class="tile" href="https://seancyan.github.io/vue-image-gallery/">
           <img src="./img/galleryBW.jpg" alt="image gallery tile">
         </a>
         <div class="tile_overlay red">
@@ -122,7 +122,7 @@
             <h2>Vue.js Image Gallery</h2>
             <div class="line"></div>
             <p>Image gallery with responsive masonry layout & scrollable lightbox, created using Vue</p>
-            <button><a href="https://seancyan.github.io/vue-image-gallery/" target="_blank">Full Site</a></button><button><a href="https://github.com/SeanCyan/vue-image-gallery" target="_blank">Repo</a></button>
+            <button><a href="https://seancyan.github.io/vue-image-gallery/">Full Site</a></button><button><a href="https://github.com/SeanCyan/vue-image-gallery" target="_blank">Repo</a></button>
           </div>
         </div>
       </article>
