--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Sean Nattress | Front End Dev</title>
+  <title>Sean Nattress | Web Designer & Developer | Blending code and creativity</title>
   <!--meta-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--css-->
@@ -10,6 +10,10 @@
   <link rel="stylesheet" type="text/css" href="css/layout.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oleo+Script" rel="stylesheet"> 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
@@ -24,7 +28,7 @@
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
           <li><a href="#contact" class="nav-links">Contact</a></li>
-          <li><a href="https://drive.google.com/file/d/1ofZLJFl7q1xEr_4588w-_woWlZHKPlQW/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
+          <li><a href="https://drive.google.com/file/d/14hnNaRkWC20y1DhiC-6VDKFcjzLS80OS/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
       <div class="homeContent">
@@ -54,7 +58,7 @@
             <h2>Design Work</h2>
             <div class="line"></div>
             <p>Click to view some examples of emails and onsite displays that I have designed for clients</p>
-            <button class="buttonLg"><a href="clientWork.html">View More</a></button>
+            <button class="buttonLg"><a href="clientWork.html">View More</a></button><button><a href="https://github.com/SeanCyan/EMR-Carousel/" target="_blank">Repo</a></button>
           </div>
         </div>
       </article>
@@ -80,7 +84,7 @@
               <h2>eBooks</h2>
               <div class="line"></div>
               <p>Click to view some sample pages from ecommerce ebooks I have designed</p>
-              <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/">View More</a></button>
+              <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/">View More</a></button><button><a href="https://github.com/SeanCyan/Ebooks/" target="_blank">Repo</a></button>
             </div>
           </div>
         </article>
