--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="overlay_content">
             <h2>Design Work</h2>
             <div class="line"></div>
-            <p>Click to view some examples of emails and onsite displays that I have designed for clients</p>
+            <p>Click to view a selection of emails and onsite displays that I have designed for clients</p>
             <button class="buttonLg"><a href="clientWork.html">View More</a></button><button><a href="https://github.com/SeanCyan/EMR-Carousel/" target="_blank">Repo</a></button>
           </div>
         </div>
@@ -84,7 +84,7 @@
             <div class="overlay_content">
               <h2>eBooks</h2>
               <div class="line"></div>
-              <p>Click to view some sample pages from ecommerce ebooks I have designed</p>
+              <p>I have designed ebooks looking at ecommerce stats & trends which have been used for market analysis and lead generation. Click below to see sample pages.</p>
               <button class="buttonLg"><a href="https://seancyan.github.io/Ebooks/">View More</a></button><button><a href="https://github.com/SeanCyan/Ebooks/" target="_blank">Repo</a></button>
             </div>
           </div>
