new client work link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>Design Work</h2>
             <div class="line"></div>
             <p>Click to view a selection of emails and onsite displays that I have designed for clients</p>
-            <button class="buttonLg"><a href="clientWork.html">View More</a></button><button><a href="https://github.com/SeanCyan/EMR-Carousel/" target="_blank">Repo</a></button>
+            <button class="buttonLg"><a href="https://seancyan.github.io/Design-Work/#page1">View More</a></button><button><a href="https://github.com/SeanCyan/EMR-Carousel/" target="_blank">Repo</a></button>
           </div>
         </div>
       </article>
