--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   <link rel="manifest" href="/site.webmanifest">
   <!--css-->
   <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/layout.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oleo+Script" rel="stylesheet"> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="paralax">
+  <div class="homeBg">
     <div class="gradient">
       <nav class="navbar">
         <span id="navbar-toggle">
@@ -51,7 +50,7 @@
   <div class="grid">
     <div class="col-1">
       <article>
-        <a name="projects" class="tile" href="clientWork.html" target="_blank">
+        <a name="projects" class="tile" href="https://seancyan.github.io/Design-Work/#page1" target="_blank">
           <img src="./img/workExamplesBW.jpg" alt="work examples">
         </a>
         <div class="tile_overlay red">
@@ -65,15 +64,15 @@
       </article>
       <div class="col-row">
         <article>
-          <a class="tile" href="https://seancyan.github.io/Hangzhou/">
-          <img src="./img/temple.jpg">
+          <a class="tile" href="https://seancyan.github.io/Metronome/">
+          <img src="./img/metronome.jpg">
         </a>
         <div class="tile_overlay red">
           <div class="overlay_content">
-            <h2>Landing Page</h2>
+            <h2>Metronome</h2>
             <div class="line"></div>
-            <p>Mockup for a travel site landing page with newsletter signup modal</p>
-            <button><a href="https://seancyan.github.io/Hangzhou/">Full Site</a></button><button><a href="https://github.com/SeanCyan/Hangzhou" target="_blank">Repo</a></button>
+            <p>Metronome built with Vue.js for practicing those guitar scales</p>
+            <button><a href="https://seancyan.github.io/Metronome/">Full Site</a></button><button><a href="https://github.com/SeanCyan/Metronome" target="_blank">Repo</a></button>
           </div>
         </article>
         <article>
