--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li><a href="#" class="nav-links">Home</a></li>
           <li><a href="#projects" class="nav-links">Projects</a></li>
           <li><a href="#contact" class="nav-links">Contact</a></li>
-          <li><a href="https://drive.google.com/file/d/14hnNaRkWC20y1DhiC-6VDKFcjzLS80OS/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
+          <li><a href="https://drive.google.com/file/d/1SPx2edmrIIlPAWuVj6_VI5QGRjzn7odF/view?usp=sharing" target="_blank" class="nav-links">CV</a></li>
         </ul>
       </nav>
       <div class="homeContent">
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="profilePicContainer">
-          <img class="profilePic" src="./img/meImg.png" alt="Sean Nattress">
+          <img class="profilePic" src="./img/meImg.png" alt="Sean Nattress Profile Picture">
         </div>
       </div>
     </div>
@@ -51,13 +51,13 @@
     <div class="col-1">
       <article>
         <a name="projects" class="tile" href="https://seancyan.github.io/Design-Work/#page1" target="_blank">
-          <img src="./img/workExamplesBW.jpg" alt="work examples">
+          <img src="./img/workExamplesBW.jpg" alt="work examples tile">
         </a>
-        <div class="tile_overlay red">
+        <div class="tile_overlay blue">
           <div class="overlay_content">
-            <h2>Design Work</h2>
+            <h2>Client Work</h2>
             <div class="line"></div>
-            <p>Click to view a selection of emails and onsite displays that I have designed for clients</p>
+            <p>Click to view a selection of emails and onsite displays that I have designed and built for clients</p>
             <button class="buttonLg"><a href="https://seancyan.github.io/Design-Work/#page1">View More</a></button><button><a href="https://github.com/SeanCyan/EMR-Carousel/" target="_blank">Repo</a></button>
           </div>
         </div>
@@ -65,9 +65,9 @@
       <div class="col-row">
         <article>
           <a class="tile" href="https://seancyan.github.io/Metronome/">
-          <img src="./img/metronome.jpg">
+          <img src="./img/metronome.jpg" alt="metronome tile">
         </a>
-        <div class="tile_overlay red">
+        <div class="tile_overlay purple">
           <div class="overlay_content">
             <h2>Metronome</h2>
             <div class="line"></div>
@@ -77,9 +77,9 @@
         </article>
         <article>
           <a class="tile" href="https://seancyan.github.io/Ebooks/">
-            <img src="./img/ebookBW.jpg" alt="ebooks">
+            <img src="./img/ebookBW.jpg" alt="ebooks tile">
           </a>
-          <div class="tile_overlay blue">
+          <div class="tile_overlay red">
             <div class="overlay_content">
               <h2>eBooks</h2>
               <div class="line"></div>
@@ -93,7 +93,7 @@
         <a name="projects" class="tile" href="https://seancyan.github.io/reactjs-calendar/">
           <img src="./img/calendar2BW.jpg" alt="react calendar tile">
         </a>
-        <div class="tile_overlay purple">
+        <div class="tile_overlay blue">
           <div class="overlay_content">
             <h2>React.js Calendar</h2>
             <div class="line"></div>
@@ -137,14 +137,14 @@
       <h2>Contact</h2>
       <div class="contact">
         <a name="contact" href="mailto:snattress5@googlemail.com">
-          <img src="icons/mail.svg">
+          <img src="icons/mail.svg" alt="email icon">
           <span>snattress5@googlemail.com</span>
         </a>
         <a href="https://github.com/SeanCyan" target="_blank">
-          <img src="icons/github.svg">
+          <img src="icons/github.svg" alt="github icon">
           <span>GitHub</span>
           <a href="https://dribbble.com/Sean_Nattress" target="_blank">
-            <img src="icons/dribbble.svg">
+            <img src="icons/dribbble.svg" alt="dribbble icon">
             <span>Dribbble</span>
         </a>
       </a>
